--- a/Cloth App/NewModule/StoreProfile/XIB/ItemTbCell.xib
+++ b/Cloth App/NewModule/StoreProfile/XIB/ItemTbCell.xib
@@ -9,10 +9,15 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="ProximaNova-SemiBold.otf">
+            <string>ProximaNova-Semibold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemTbCell" rowHeight="334" id="KGk-i7-Jjw" customClass="ItemTbCell" customModule="Cloth_App" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemTbCell" rowHeight="334" id="KGk-i7-Jjw" customClass="ItemTbCell" customModule="Clothing_Click" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="334"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -51,18 +56,27 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No data available" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gl3-FC-9zS">
+                        <rect key="frame" x="20" y="76" width="280" height="25"/>
+                        <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="25"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="90p-Ro-B8G" secondAttribute="trailing" constant="14" id="0Wf-Cb-yiW"/>
                     <constraint firstItem="HSo-dq-EFc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="1gQ-bF-iql"/>
+                    <constraint firstItem="gl3-FC-9zS" firstAttribute="top" secondItem="HSo-dq-EFc" secondAttribute="bottom" constant="40" id="5hw-rc-228"/>
                     <constraint firstAttribute="bottom" secondItem="HYK-ML-fsZ" secondAttribute="bottom" id="7AB-Z5-vwW"/>
                     <constraint firstItem="90p-Ro-B8G" firstAttribute="bottom" secondItem="HSo-dq-EFc" secondAttribute="bottom" id="Jcc-We-PPf"/>
                     <constraint firstItem="HYK-ML-fsZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kqi-XN-qce"/>
                     <constraint firstItem="90p-Ro-B8G" firstAttribute="centerY" secondItem="HSo-dq-EFc" secondAttribute="centerY" id="OnX-sB-TSq"/>
                     <constraint firstItem="HSo-dq-EFc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="PvN-xQ-csF"/>
                     <constraint firstItem="90p-Ro-B8G" firstAttribute="top" secondItem="HSo-dq-EFc" secondAttribute="top" id="ULs-Ro-Kz3"/>
+                    <constraint firstAttribute="trailing" secondItem="gl3-FC-9zS" secondAttribute="trailing" constant="20" id="Y5e-Gj-50s"/>
                     <constraint firstItem="HYK-ML-fsZ" firstAttribute="top" secondItem="HSo-dq-EFc" secondAttribute="bottom" id="ZBE-Lx-A1L"/>
                     <constraint firstAttribute="trailing" secondItem="HYK-ML-fsZ" secondAttribute="trailing" id="dTR-tf-3l4"/>
+                    <constraint firstItem="gl3-FC-9zS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="hGG-zd-Zbu"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -70,6 +84,7 @@
                 <outlet property="btnFilter" destination="90p-Ro-B8G" id="xxp-f4-n25"/>
                 <outlet property="collectionView" destination="HYK-ML-fsZ" id="OGA-eI-6nz"/>
                 <outlet property="heightCon" destination="Oer-iF-3ku" id="DVk-gM-HP1"/>
+                <outlet property="lblNoDataAvailable" destination="gl3-FC-9zS" id="MlC-cR-7jw"/>
             </connections>
             <point key="canvasLocation" x="80.916030534351137" y="100.70422535211269"/>
         </tableViewCell>
