--- a/Cloth App/Storyboard/Sell.storyboard
+++ b/Cloth App/Storyboard/Sell.storyboard
@@ -620,7 +620,7 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tR-2K-qBq">
-                                        <rect key="frame" x="181.66666666666666" y="15.666666666666673" width="30" height="18.666666666666671"/>
+                                        <rect key="frame" x="181.33333333333334" y="15.666666666666671" width="30.333333333333343" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" name="Black_Theme_Color"/>
                                         <nil key="highlightedColor"/>
@@ -812,7 +812,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shipped: December 21" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CwF-jw-WmT">
-                                                        <rect key="frame" x="20" y="52.333333333333343" width="313" height="19"/>
+                                                        <rect key="frame" x="20" y="52.333333333333343" width="160.33333333333334" height="19"/>
                                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                         <color key="textColor" name="Black_Theme_Color"/>
                                                         <nil key="highlightedColor"/>
@@ -923,7 +923,6 @@
                                                     <constraint firstItem="pqR-sc-1YN" firstAttribute="top" secondItem="chE-tE-5Gf" secondAttribute="bottom" constant="10" id="8yG-2i-4w2"/>
                                                     <constraint firstItem="IUP-T0-oqN" firstAttribute="trailing" secondItem="sY0-x0-TtC" secondAttribute="trailing" id="BFc-cD-0fm"/>
                                                     <constraint firstItem="bdH-72-hYP" firstAttribute="trailing" secondItem="sY0-x0-TtC" secondAttribute="trailing" id="Bnq-en-p2T"/>
-                                                    <constraint firstItem="CwF-jw-WmT" firstAttribute="trailing" secondItem="Qyh-bj-eup" secondAttribute="trailing" id="Cok-Pk-7wW"/>
                                                     <constraint firstItem="chE-tE-5Gf" firstAttribute="leading" secondItem="s0z-ky-hMi" secondAttribute="leading" constant="20" id="DAG-u0-hTx"/>
                                                     <constraint firstItem="Rgd-J2-3DJ" firstAttribute="leading" secondItem="pl6-EW-VpN" secondAttribute="leading" id="GO4-nV-xeZ"/>
                                                     <constraint firstItem="Qyh-bj-eup" firstAttribute="leading" secondItem="s0z-ky-hMi" secondAttribute="leading" constant="20" id="RsY-CL-BsR"/>
@@ -1021,8 +1020,8 @@
                                                                 <color key="textColor" name="Black_Theme_Color"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAA-Fs-adU">
-                                                                <rect key="frame" x="40" y="117.00000000000004" width="273" height="49.333333333333329"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAA-Fs-adU">
+                                                                <rect key="frame" x="40" y="138.00000000000006" width="273" height="49.333333333333343"/>
                                                                 <string key="text">Joshua kian
 3539 12A St NY, orem ispem
 USA</string>
@@ -1061,14 +1060,14 @@ USA</string>
                                                                     <constraint firstAttribute="height" constant="68" id="vSe-dV-eSI"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shipped On 2-21-2024" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ct4-oU-mpO">
-                                                                <rect key="frame" x="98.000000000000014" y="475.66666666666669" width="157.33333333333337" height="19"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Shipped On 2-21-2024" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ct4-oU-mpO">
+                                                                <rect key="frame" x="98.000000000000014" y="496.66666666666669" width="157.33333333333337" height="19.000000000000057"/>
                                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                                 <color key="textColor" name="Black_Theme_Color"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HqJ-fE-4E2">
-                                                                <rect key="frame" x="40" y="504.66666666666669" width="273" height="49.333333333333314"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HqJ-fE-4E2">
+                                                                <rect key="frame" x="40" y="525.66666666666674" width="273" height="49.333333333333371"/>
                                                                 <string key="text">Joshua kian
 3539 12A St NY, orem ispem
 USA</string>
@@ -1479,7 +1478,7 @@ USA, t6j 1m3</string>
                                 <rect key="frame" x="0.0" y="59" width="393" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue Tshirt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vs2-Kg-cxQ">
-                                        <rect key="frame" x="70" y="15.666666666666673" width="253" height="18.666666666666671"/>
+                                        <rect key="frame" x="70" y="15.666666666666671" width="253" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" name="Black_Theme_Color"/>
                                         <nil key="highlightedColor"/>
@@ -1909,7 +1908,7 @@ USA, t6j 1m3</string>
                                 <rect key="frame" x="0.0" y="59" width="393" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Guide" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dbw-vL-CEE">
-                                        <rect key="frame" x="151.66666666666666" y="15.666666666666673" width="90" height="18.666666666666671"/>
+                                        <rect key="frame" x="152.66666666666666" y="15.666666666666671" width="88" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" name="Black_Theme_Color"/>
                                         <nil key="highlightedColor"/>
@@ -3133,10 +3132,11 @@ USA, t6j 1m3</string>
                                                 <constraints>
                                                     <constraint firstItem="3MI-Yx-iRK" firstAttribute="top" secondItem="iRb-q5-dv6" secondAttribute="bottom" constant="14" id="38y-wE-yvO"/>
                                                     <constraint firstItem="3MI-Yx-iRK" firstAttribute="centerX" secondItem="Wyy-nw-X6k" secondAttribute="centerX" id="6rq-9A-UxG"/>
+                                                    <constraint firstItem="tac-9o-CQg" firstAttribute="top" secondItem="lFM-Nn-Quw" secondAttribute="bottom" constant="25" id="EWA-Cn-URI"/>
                                                     <constraint firstAttribute="trailing" secondItem="lFM-Nn-Quw" secondAttribute="trailing" constant="34" id="HDo-em-zpi"/>
                                                     <constraint firstAttribute="bottom" secondItem="tac-9o-CQg" secondAttribute="bottom" constant="20" id="PL0-WN-iAa"/>
                                                     <constraint firstItem="lFM-Nn-Quw" firstAttribute="top" secondItem="3MI-Yx-iRK" secondAttribute="bottom" constant="6" id="Q6m-QA-4U3"/>
-                                                    <constraint firstAttribute="height" constant="240" id="V7D-1S-h2u"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="240" id="V7D-1S-h2u"/>
                                                     <constraint firstItem="iRb-q5-dv6" firstAttribute="centerX" secondItem="Wyy-nw-X6k" secondAttribute="centerX" id="cR8-ZP-bpL"/>
                                                     <constraint firstItem="tac-9o-CQg" firstAttribute="leading" secondItem="Wyy-nw-X6k" secondAttribute="leading" constant="20" id="e6J-P7-atN"/>
                                                     <constraint firstItem="iRb-q5-dv6" firstAttribute="top" secondItem="Wyy-nw-X6k" secondAttribute="top" constant="30" id="fQK-Cq-9hu"/>
@@ -3484,7 +3484,7 @@ USA, t6j 1m3</string>
                                 <rect key="frame" x="0.0" y="59" width="393" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5A-N9-0EG">
-                                        <rect key="frame" x="163.66666666666666" y="15.666666666666673" width="65.666666666666657" height="18.666666666666671"/>
+                                        <rect key="frame" x="164" y="15.666666666666671" width="65" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" name="Black_Theme_Color"/>
                                         <nil key="highlightedColor"/>
@@ -3608,7 +3608,7 @@ USA, t6j 1m3</string>
                                 <rect key="frame" x="0.0" y="59" width="393" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZD-Le-JZF">
-                                        <rect key="frame" x="163.66666666666666" y="15.666666666666673" width="65.666666666666657" height="18.666666666666671"/>
+                                        <rect key="frame" x="164" y="15.666666666666671" width="65" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" name="Black_Theme_Color"/>
                                         <nil key="highlightedColor"/>
